solved the overlapping problem. removed the position relative

--- a/css/main.css
+++ b/css/main.css
@@ -94,8 +94,6 @@ section .container{
 }
 
 .hero-img {
-  
-  position: relative;
   width: 500px;
 }
 
